Service details view

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <h1 class="title text-info slide-in">
     <nb-icon icon="flash-outline" status="success"></nb-icon>
-    LDSO<span class="text-primary">-OnCloud </span>
+    B M S<span class="text-primary"> - I N F I N I T Y </span>
 </h1>
 
 <h1 id="title" class="title">Login</h1>
