--- a/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
+++ b/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
@@ -47,77 +47,98 @@
         </nb-card-header>
         <div class="details-card">
             <nb-card-body>
-                <div class="c-detail-container">
+                <div class="srv-detail-container">
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">Customer ID</div>
+                        <div class="c-detail-item-value text-danger">
+                            <a class="hvr-grow"
+                               [routerLink]="'/pages/customer/' + (serviceAccount | async).customer_id"
+                               routerLinkActive="active">
+                                <span>
+                                    <nb-icon icon="people-outline" pack="eva" status="danger"></nb-icon>
+                                    {{(serviceAccount | async).customer_id}}
+                                </span>
+                            </a>
+                        </div>
+                    </div>
                     <div class="c-detail-item">
                         <div class="c-detail-item-title">Service #</div>
                         <div class="c-detail-item-value text-danger font-weight-bold">{{(serviceAccount | async).service_id}}</div>
                     </div>
-<!--                    <div class="c-detail-item">-->
-<!--                        <div class="c-detail-item-title">Customer ID</div>-->
-<!--                        <div class="c-detail-item-value text-primary font-weight-bold">{{(customerDetails | async).customer_id}}</div>-->
-<!--                    </div>-->
-<!--                    <div class="c-detail-item">-->
-<!--                        <div class="c-detail-item-title">Company Name</div>-->
-<!--                        <div class="c-detail-item-value text-danger font-weight-bold">{{(customerDetails | async).company_name}}</div>-->
-<!--                    </div>-->
-<!--                    <div class="c-detail-item">-->
-<!--                        <div class="c-detail-item-title">Alias</div>-->
-<!--                        <div class="c-detail-item-value">{{(customerDetails | async).company_name}}</div>-->
-<!--                    </div>-->
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">Service Type</div>
+                        <div class="c-detail-item-value text-primary">{{(serviceAccount | async).service_type}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">Description</div>
+                        <div class="c-detail-item-value">{{(serviceAccount | async).service_desc}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">Status</div>
+                        <div class="c-detail-item-value text-primary">{{(serviceAccount | async).service_status}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">Start Date</div>
+                        <div class="c-detail-item-value">{{(serviceAccount | async).service_start}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">Linked Asset</div>
+                        <div class="c-detail-item-value text-danger font-weight-bold">{{(serviceAccount | async).asset_id}}</div>
+                    </div>
                 </div>
 
-<!--                <div class="tags">-->
-<!--                    <div class="text-info"-->
-<!--                         *ngFor="let tag of (customerDetails | async).tags">-->
-<!--                        {{ tag }}-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="tags">
+                    <div class="text-info"
+                         *ngFor="let tag of (serviceAccount | async).tags">
+                        <button nbButton outline shape="round" size="small" status="success">{{ tag }}</button>
+                    </div>
+                </div>
             </nb-card-body>
         </div>
     </nb-card>
 
-<!--    <nb-card>-->
-<!--        <nb-card-header>-->
-<!--            <h6 class="text-primary">Customer details</h6>-->
-<!--        </nb-card-header>-->
-<!--        <div class="details-card">-->
-<!--            <nb-card-body>-->
-<!--                <div class="c-detail-item">-->
-<!--                    <div class="c-detail-item-title text-primary">Billing Address</div>-->
-<!--                    <div class="c-detail-item-value">{{(customerDetails | async).billing_address.street}}</div>-->
-<!--                    <div class="c-detail-item-value">{{(customerDetails | async).billing_address.city}}</div>-->
-<!--                    <div class="c-detail-item-value">{{(customerDetails | async).billing_address.state}}</div>-->
-<!--                    <div class="c-detail-item-value">{{(customerDetails | async).billing_address.country}}</div>-->
-<!--                    <div class="c-detail-item-value">{{(customerDetails | async).billing_address.postcode}}</div>-->
-<!--                </div>-->
-<!--                <div class="c-detail-item">-->
-<!--                    <div class="c-detail-item-title text-primary">Contact Info</div>-->
-<!--                    <div class="c-detail-item-value">{{(customerDetails | async).contact_info.email}}</div>-->
-<!--                    <div class="c-detail-item-value">{{(customerDetails | async).contact_info.contact_info}}</div>-->
-<!--                </div>-->
-<!--            </nb-card-body>-->
-<!--        </div>-->
-<!--    </nb-card>-->
+    <nb-card>
+        <nb-card-header>
+            <h6 class="text-primary">Contact Info</h6>
+        </nb-card-header>
+        <div class="details-card">
+            <nb-card-body>
+                <div class="c-detail-item">
+                    <div class="c-detail-item-title text-primary">Billing Address</div>
+                    <div class="c-detail-item-value">{{(serviceAccount | async).billing_address.street}}</div>
+                    <div class="c-detail-item-value">{{(serviceAccount | async).billing_address.city}}</div>
+                    <div class="c-detail-item-value">{{(serviceAccount | async).billing_address.state}}</div>
+                    <div class="c-detail-item-value">{{(serviceAccount | async).billing_address.country}}</div>
+                    <div class="c-detail-item-value">{{(serviceAccount | async).billing_address.postcode}}</div>
+                </div>
+                <div class="c-detail-item">
+                    <div class="c-detail-item-title text-primary">Contact Info</div>
+                    <div class="c-detail-item-value">{{(serviceAccount | async).contact_info.email}}</div>
+                    <div class="c-detail-item-value">{{(serviceAccount | async).contact_info.contact_info}}</div>
+                </div>
+            </nb-card-body>
+        </div>
+    </nb-card>
 
-<!--    <nb-card>-->
-<!--        <nb-card-header>-->
-<!--            <h6 class="text-primary">Payment Details</h6>-->
-<!--        </nb-card-header>-->
-<!--        <div class="details-card">-->
-<!--            <nb-card-body>-->
-<!--                <div class="c-detail-item">-->
-<!--                    <div class="c-detail-item-title text-primary">Preferred Method</div>-->
-<!--                    <div class="c-detail-item-value">Direct Debit</div>-->
-<!--                    <div class="c-detail-item-title text-primary">Preferred Date</div>-->
-<!--                    <div class="c-detail-item-value">2020-xx-xx</div>-->
-<!--                    <div class="c-detail-item-title text-primary">Fixed Direct Debit Amt</div>-->
-<!--                    <div class="c-detail-item-value">£70.00</div>-->
-<!--                    <div class="c-detail-item-title text-primary">Bank Name</div>-->
-<!--                    <div class="c-detail-item-value">Barclays Bank Plc</div>-->
-<!--                    <div class="c-detail-item-title text-primary">a/c number</div>-->
-<!--                    <div class="c-detail-item-value">XXXXX-860</div>-->
-<!--                </div>-->
-<!--            </nb-card-body>-->
-<!--        </div>-->
-<!--    </nb-card>-->
+    <!--    <nb-card>-->
+    <!--        <nb-card-header>-->
+    <!--            <h6 class="text-primary">Payment Details</h6>-->
+    <!--        </nb-card-header>-->
+    <!--        <div class="details-card">-->
+    <!--            <nb-card-body>-->
+    <!--                <div class="c-detail-item">-->
+    <!--                    <div class="c-detail-item-title text-primary">Preferred Method</div>-->
+    <!--                    <div class="c-detail-item-value">Direct Debit</div>-->
+    <!--                    <div class="c-detail-item-title text-primary">Preferred Date</div>-->
+    <!--                    <div class="c-detail-item-value">2020-xx-xx</div>-->
+    <!--                    <div class="c-detail-item-title text-primary">Fixed Direct Debit Amt</div>-->
+    <!--                    <div class="c-detail-item-value">£70.00</div>-->
+    <!--                    <div class="c-detail-item-title text-primary">Bank Name</div>-->
+    <!--                    <div class="c-detail-item-value">Barclays Bank Plc</div>-->
+    <!--                    <div class="c-detail-item-title text-primary">a/c number</div>-->
+    <!--                    <div class="c-detail-item-value">XXXXX-860</div>-->
+    <!--                </div>-->
+    <!--            </nb-card-body>-->
+    <!--        </div>-->
+    <!--    </nb-card>-->
 </div>
