Customer stats display added

--- a/src/app/pages/customer/customer-search/customer-search.component.html
+++ b/src/app/pages/customer/customer-search/customer-search.component.html
@@ -36,3 +36,22 @@
         </nb-card>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-lg-4">
+        <nb-card>
+            <nb-card-header>Customer Split</nb-card-header>
+            <nb-card-body>
+                <ngx-customer-360-pie></ngx-customer-360-pie>
+            </nb-card-body>
+        </nb-card>
+    </div>
+    <div class="col-lg-8">
+        <nb-card>
+            <nb-card-header>Customer by Dist No</nb-card-header>
+            <nb-card-body>
+                <ngx-customer-360-dist-pie></ngx-customer-360-dist-pie>
+            </nb-card-body>
+        </nb-card>
+    </div>
+</div>
