--- a/src/app/pages/customer/customer-search/customer-search.component.html
+++ b/src/app/pages/customer/customer-search/customer-search.component.html
@@ -55,3 +55,21 @@
         </nb-card>
     </div>
 </div>
+<div class="row">
+    <div class="col-lg-7">
+        <nb-card>
+            <nb-card-header>Customer Growth</nb-card-header>
+            <nb-card-body>
+                <ngx-customer-360-growth-area></ngx-customer-360-growth-area>
+            </nb-card-body>
+        </nb-card>
+    </div>
+    <div class="col-lg-5">
+        <nb-card>
+            <nb-card-header>Customer Queries by Month</nb-card-header>
+            <nb-card-body>
+                <ngx-customer-360-query-bar></ngx-customer-360-query-bar>
+            </nb-card-body>
+        </nb-card>
+    </div>
+</div>
