Resolve service list overflow issue

--- a/src/app/pages/customer/customer-details/customer-details.component.html
+++ b/src/app/pages/customer/customer-details/customer-details.component.html
@@ -129,14 +129,14 @@
 </div>
 
 <div class="customer-detail">
-    <nb-card>
+    <nb-card size="medium">
         <nb-card-header>
             <span class="text-primary font-weight-bold">
                 <nb-icon icon="pantone-outline" pack="eva" status="danger"></nb-icon>
                 SERVICE ACCOUNTS
             </span>
         </nb-card-header>
-        <div class="details-card">
+        <div class="srv-accounts-list-card">
             <nb-card-body>
                 <div class="srv-detail-container">
                     <div class="c-detail-item">
