--- a/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
+++ b/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
@@ -119,26 +119,98 @@
             </nb-card-body>
         </div>
     </nb-card>
+</div>
 
-    <!--    <nb-card>-->
-    <!--        <nb-card-header>-->
-    <!--            <h6 class="text-primary">Payment Details</h6>-->
-    <!--        </nb-card-header>-->
-    <!--        <div class="details-card">-->
-    <!--            <nb-card-body>-->
-    <!--                <div class="c-detail-item">-->
-    <!--                    <div class="c-detail-item-title text-primary">Preferred Method</div>-->
-    <!--                    <div class="c-detail-item-value">Direct Debit</div>-->
-    <!--                    <div class="c-detail-item-title text-primary">Preferred Date</div>-->
-    <!--                    <div class="c-detail-item-value">2020-xx-xx</div>-->
-    <!--                    <div class="c-detail-item-title text-primary">Fixed Direct Debit Amt</div>-->
-    <!--                    <div class="c-detail-item-value">£70.00</div>-->
-    <!--                    <div class="c-detail-item-title text-primary">Bank Name</div>-->
-    <!--                    <div class="c-detail-item-value">Barclays Bank Plc</div>-->
-    <!--                    <div class="c-detail-item-title text-primary">a/c number</div>-->
-    <!--                    <div class="c-detail-item-value">XXXXX-860</div>-->
-    <!--                </div>-->
-    <!--            </nb-card-body>-->
-    <!--        </div>-->
-    <!--    </nb-card>-->
+
+<div class="srv-detail">
+    <nb-card size="medium">
+        <nb-card-header>
+            <span class="text-primary font-weight-bold">
+                <nb-icon icon="pantone-outline" pack="eva" status="danger"></nb-icon>
+                BILLS ISSUED
+            </span>
+        </nb-card-header>
+        <div class="bill-invoice-card">
+            <nb-card-body>
+                <div class="bill-invoice-container">
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title text-primary">Invoice ID</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title text-primary">Date Issued</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title text-primary">Total Due ID</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title text-primary">Open Bal</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title text-primary">Gross</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title text-primary">Net</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title text-primary">VAT</div>
+                    </div>
+                </div>
+                <div class="bill-invoice-container" *ngFor="let invoice of (billInvoices | async)">
+                    <div class="c-detail-item">
+                        <a class="hvr-grow"
+                           [routerLink]="'/pages/bill-invoice/' + invoice.invoice_id"
+                           routerLinkActive="active">
+                            <span>
+                                <nb-icon icon="file-text-outline" pack="eva" status="primary"></nb-icon>
+                                {{ invoice.invoice_id }}
+                            </span>
+                        </a>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-value">{{invoice.date_issued}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-value">{{invoice.total_due}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-value">{{'£ ' + invoice.open_bal}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-value">{{'£ ' + invoice.gross}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-value">{{'£ ' + invoice.net}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-value">{{'£ ' + invoice.vat}}</div>
+                    </div>
+                </div>
+            </nb-card-body>
+        </div>
+    </nb-card>
+
+    <nb-card>
+        <nb-card-header>
+            <span class="text-primary font-weight-bold">
+                <nb-icon icon="grid-outline" pack="eva" status="danger"></nb-icon>
+                ACCOUNT INFO
+            </span>
+        </nb-card-header>
+        <div class="details-card">
+            <nb-card-body>
+                <div class="c-detail-item">
+                    <div class="c-detail-item-title text-primary">Outstanding Balance</div>
+                    <div class="c-detail-item-value text-danger font-weight-bolder">£300.70</div>
+                    <div class="c-detail-item-title text-primary">Last Payment</div>
+                    <div class="c-detail-item-value">2020-07-07</div>
+                    <div class="c-detail-item-title text-primary">Last Payment Amount</div>
+                    <div class="c-detail-item-value">£70.00</div>
+                    <div class="c-detail-item-title text-primary">Last Bill Date</div>
+                    <div class="c-detail-item-value">2020-08-01</div>
+                    <div class="c-detail-item-title text-primary">Last Bill Amount</div>
+                    <div class="c-detail-item-value">£370.70</div>
+                </div>
+            </nb-card-body>
+        </div>
+    </nb-card>
 </div>
