charts for service accounts

--- a/src/app/pages/srv-account/srv-account-search/srv-account-search.component.html
+++ b/src/app/pages/srv-account/srv-account-search/srv-account-search.component.html
@@ -36,3 +36,21 @@
         </nb-card>
     </div>
 </div>
+<div class="row">
+    <div class="col-lg-6">
+        <nb-card>
+            <nb-card-header>Account Split</nb-card-header>
+            <nb-card-body>
+                <ngx-srv-360-type-pie></ngx-srv-360-type-pie>
+            </nb-card-body>
+        </nb-card>
+    </div>
+    <div class="col-lg-6">
+        <nb-card>
+            <nb-card-header>Accounts by Billing Org</nb-card-header>
+            <nb-card-body>
+                <ngx-srv-360-billing-pie></ngx-srv-360-billing-pie>
+            </nb-card-body>
+        </nb-card>
+    </div>
+</div>
