--- a/src/app/pages/srv-account/srv-account-search/srv-account-search.component.html
+++ b/src/app/pages/srv-account/srv-account-search/srv-account-search.component.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12"  *ngIf="searchResultVisible">
         <nb-card accent="primary"
                  [nbSpinner]="spinner_loading"
                  nbSpinnerStatus="danger"
@@ -29,7 +29,7 @@
                 </div>
             </nb-card-header>
 
-            <nb-card-body *ngIf="searchResultVisible">
+            <nb-card-body>
                 <ng2-smart-table [settings]="tableSettings" [source]="localDataSource">
                 </ng2-smart-table>
             </nb-card-body>
@@ -39,7 +39,7 @@
 <div class="row">
     <div class="col-lg-6">
         <nb-card>
-            <nb-card-header>Account Split</nb-card-header>
+            <nb-card-header>Account by Service Type</nb-card-header>
             <nb-card-body>
                 <ngx-srv-360-type-pie></ngx-srv-360-type-pie>
             </nb-card-body>
