--- a/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
+++ b/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
@@ -200,10 +200,10 @@
 
     <div class="bill-invoice-card">
       <nb-card-body>
-        <ng-smart-table
+        <ng2-smart-table
           [settings]="tableSettings"
           [source]="localDataSource"
-        ></ng-smart-table>
+        ></ng2-smart-table>
         <!-- <div class="bill-invoice-container">
                     <div class="c-detail-item">
                         <div class="c-detail-item-title text-primary">Invoice ID</div>
