smart table card adjust

--- a/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
+++ b/src/app/pages/srv-account/srv-account-details/srv-account-details.component.html
@@ -190,7 +190,7 @@
 </div>
 
 <div class="srv-detail">
-  <nb-card size="medium">
+  <nb-card size="medium" class="smart-table">
     <nb-card-header>
       <span class="text-primary font-weight-bold">
         <nb-icon icon="pantone-outline" pack="eva" status="danger"></nb-icon>
