--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -23,6 +23,7 @@ $nb-themes: nb-register-theme(
 		slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
 		font-family-primary: Poppins,
 		font-family-secondary: Roboto,
+		header-height: 3.5rem,
 	),
 	default,
 	default
