added custom styles to global theme style.scss

--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -15,19 +15,21 @@
 //
 @import './anim.style';
 
+// custom card styles @author : Ganesh
+@import './custom-card.scss';
+
+//
+@import './header.scss';
+
 // install the framework and custom global styles
 @include nb-install() {
+	// framework global styles
+	@include nb-theme-global();
+	@include nb-auth-global();
 
-  // framework global styles
-  @include nb-theme-global();
-  @include nb-auth-global();
+	@include ngx-layout();
+	// loading progress bar
+	@include ngx-pace-theme();
 
-  @include ngx-layout();
-  // loading progress bar
-  @include ngx-pace-theme();
-
-  @include nb-overrides();
-
+	@include nb-overrides();
 }
-
-;
