--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <h1 class="title text-info slide-in">
     <nb-icon icon="flash-outline" status="success"></nb-icon>
-    B M S<span class="text-primary"> - I N F I N I T Y </span>
+    C<span class="text-primary"> O R T E X</span>
 </h1>
 
 <h1 id="title" class="title">Login</h1>
@@ -89,5 +89,5 @@
 </form>
 
 <section class="another-action" aria-label="Register">
-    Don't have an account? <a class="text-link" routerLink="../contact-us">contact-us @ ep-tech solutions</a>
+    Don't have an account? <a class="text-link" routerLink="../contact-us">contact-us @ ep-techsolutions.com</a>
 </section>
