reset password from login

--- a/src/app/pages/auth/reset-pasword/reset-pasword.component.html
+++ b/src/app/pages/auth/reset-pasword/reset-pasword.component.html
@@ -1,3 +1,11 @@
+<h1 class="title text-info slide-in">
+  <nb-icon icon="flash-outline" status="success"></nb-icon>
+  C<span class="text-primary"> O R T E X</span>
+</h1>
+
+<!-- <h1 id="title" class="title">Reset Password</h1> -->
+<p class="sub-title">Reset Password</p>
+
 <form (ngSubmit)="reset()" #form="ngForm" aria-labelledby="title">
   <div class="form-control-group">
     <label class="label" for="input-password">Old Password:</label>
