New logo + assets

--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -10,9 +10,9 @@
   </div>
 </div>
 <div class="header-container">
-  <a class="logo text-info hvr-float-shadow" href="#" (click)="navigateHome()">
-    <nb-icon icon="flash-outline" status="success"></nb-icon>
-    B M S - I N F I N I T Y
+  <a class="logo text-primary hvr-float-shadow" href="#" (click)="navigateHome()">
+    <nb-icon icon="radio-button-on-outline" status="success"></nb-icon>
+    C O R T E X
   </a>
 </div>
 <div class="header-container">
