reset pass implementation

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -121,5 +121,5 @@
 </section>
 
 <section class="another-action" aria-label="Register">
-  <a class="text-link" routerLink="../resetpass"> Reset Passwor</a>
+  <a class="text-link" routerLink="../resetpass"> Reset Password</a>
 </section>
