--- a/src/app/pages/auth/reset-pasword/reset-pasword.component.html
+++ b/src/app/pages/auth/reset-pasword/reset-pasword.component.html
@@ -1,35 +1,53 @@
-<h1 class="title text-info slide-in">
-  <nb-icon icon="flash-outline" status="success"></nb-icon>
-  C<span class="text-primary"> O R T E X</span>
-</h1>
+<h1 id="title" class="title">Change password</h1>
+<p class="sub-title">Please set a new password</p>
 
-<!-- <h1 id="title" class="title">Reset Password</h1> -->
-<p class="sub-title">Reset Password</p>
+<nb-alert
+  *ngIf="showMessages.error && errors?.length && !submitted"
+  outline="danger"
+  role="alert"
+>
+  <p class="alert-title"><b>Oh snap!</b></p>
+  <ul class="alert-message-list">
+    <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
+  </ul>
+</nb-alert>
 
-<form (ngSubmit)="reset()" #form="ngForm" aria-labelledby="title">
+<nb-alert
+  *ngIf="showMessages.success && messages?.length && !submitted"
+  outline="success"
+  role="alert"
+>
+  <p class="alert-title"><b>Hooray!</b></p>
+  <ul class="alert-message-list">
+    <li *ngFor="let message of messages" class="alert-message">
+      {{ message }}
+    </li>
+  </ul>
+</nb-alert>
+
+<form (ngSubmit)="resetPass()" #resetPassForm="ngForm" aria-labelledby="title">
   <div class="form-control-group">
-    <label class="label" for="input-password">Old Password:</label>
+    <label class="label" for="input-email">Email address:</label>
     <input
       nbInput
       fullWidth
-      #oldpassword
-      name="password"
-      type="password"
-      id="input-password"
-      placeholder="Old Password"
-      [status]="
-        oldPassword.dirty ? (oldPassword.invalid ? 'danger' : 'success') : ''
-      "
-      [required]="true"
+      [(ngModel)]="user.email"
+      #email="ngModel"
+      name="email"
+      id="input-email"
+      pattern=".+@.+\..+"
+      placeholder="Email address"
+      autofocus
+      [status]="email.dirty ? (email.invalid ? 'danger' : 'success') : ''"
+      [required]="getConfigValue('forms.validation.email.required')"
+      [attr.aria-invalid]="email.invalid && email.touched ? true : null"
     />
-    <ng-container *ngIf="oldPassword.invalid && oldPassword.touched">
-      <p class="error-message" *ngIf="oldPassword.errors.minLength">
-        Password is required!
+    <ng-container *ngIf="email.invalid && email.touched">
+      <p class="error-message" *ngIf="email.errors?.required">
+        Email is required!
       </p>
-      <p class="error-message" *ngIf="oldPassword.errors?.minLength">
-        Password should contains
-        {{ MIN_PASS_LENGTH }}
-        characters
+      <p class="error-message" *ngIf="email.errors?.pattern">
+        Email should be the real one!
       </p>
     </ng-container>
   </div>
@@ -38,36 +56,92 @@
     <label class="label" for="input-password">Old Password:</label>
     <input
       nbInput
-      fullWidth
-      #newPassword
-      name="password"
+      [(ngModel)]="user['old-password']"
+      #password="ngModel"
       type="password"
       id="input-password"
-      placeholder="New Password"
+      name="old-password"
+      class="first"
+      placeholder="Old Password"
+      autofocus
+      fullWidth
+      fieldSize="large"
       [status]="
-        newPassword.dirty ? (newPassword.invalid ? 'danger' : 'success') : ''
+        password.dirty ? (password.invalid ? 'danger' : 'success') : 'basic'
       "
-      [required]="true"
+      [required]="getConfigValue('forms.validation.password.required')"
+      [minlength]="getConfigValue('forms.validation.password.minLength')"
+      [maxlength]="getConfigValue('forms.validation.password.maxLength')"
+      [attr.aria-invalid]="password.invalid && password.touched ? true : null"
     />
-    <ng-container *ngIf="newPassword.invalid && newPassword.touched">
-      <p class="error-message" *ngIf="newPassword.errors.minLength">
+    <ng-container *ngIf="password.invalid && password.touched">
+      <p class="caption status-danger" *ngIf="password.errors?.required">
         Password is required!
       </p>
-      <p class="error-message" *ngIf="newPassword.errors?.minLength">
-        Password should contains
-        {{ MIN_PASS_LENGTH }}
+      <p
+        class="caption status-danger"
+        *ngIf="password.errors?.minlength || password.errors?.maxlength"
+      >
+        Password should contains from
+        {{ getConfigValue("forms.validation.password.minLength") }} to
+        {{ getConfigValue("forms.validation.password.maxLength") }}
         characters
       </p>
+    </ng-container>
+  </div>
+
+  <div class="form-group">
+    <label class="label" for="input-re-password">New Password:</label>
+    <input
+      nbInput
+      [(ngModel)]="user['new-password']"
+      #rePass="ngModel"
+      id="input-re-password"
+      name="rePass"
+      type="password"
+      class="last"
+      placeholder="New Password"
+      fullWidth
+      fieldSize="large"
+      [status]="
+        rePass.touched
+          ? rePass.invalid || password.value != rePass.value
+            ? 'danger'
+            : 'success'
+          : 'basic'
+      "
+      [required]="getConfigValue('forms.validation.password.required')"
+      [attr.aria-invalid]="rePass.invalid && rePass.touched ? true : null"
+    />
+    <ng-container *ngIf="rePass.touched">
+      <p
+        class="caption status-danger"
+        *ngIf="rePass.invalid && rePass.errors?.required"
+      >
+        Password confirmation is required!
+      </p>
+      <!-- <p
+        class="caption status-danger"
+        *ngIf="password.value != rePass.value && !rePass.errors?.required"
+      >
+        Password does not match the confirm password.
+      </p> -->
     </ng-container>
   </div>
 
   <button
     nbButton
+    status="primary"
     fullWidth
-    status="success"
-    [disabled]="submitted || !form.valid"
+    size="large"
+    [disabled]="submitted || !resetPassForm.valid"
     [class.btn-pulse]="submitted"
   >
-    Reset Password
+    Change password
   </button>
 </form>
+
+<section class="sign-in-or-up" aria-label="Sign in or sign up">
+  <p><a class="text-link" routerLink="../login">Back to Log In</a></p>
+  <p><a class="text-link" routerLink="../register">Register</a></p>
+</section>
