--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,10 +1,9 @@
 <h1 class="title text-info slide-in">
-  <nb-icon icon="flash-outline" status="success"></nb-icon>
-  C<span class="text-primary"> O R T E X</span>
+    <img src="/assets/logo/logo_transparent.png" alt="" style="" height="325">
 </h1>
 
 <h1 id="title" class="title">Login</h1>
-<p class="sub-title">Log in with your email.</p>
+<!--<p class="sub-title">Log in with your email.</p>-->
 
 <nb-alert
   *ngIf="showMessages.error && errors?.length && !submitted"
@@ -49,7 +48,7 @@
     />
     <ng-container *ngIf="email.invalid && email.touched">
       <p class="error-message" *ngIf="email.errors?.required">
-        Email is required!
+<!--        Email is required!-->
       </p>
       <p class="error-message" *ngIf="email.errors?.pattern">
         Email should be the real one!
@@ -76,7 +75,7 @@
     />
     <ng-container *ngIf="password.invalid && password.touched">
       <p class="error-message" *ngIf="password.errors?.required">
-        Password is required!
+<!--        Password is required!-->
       </p>
       <p
         class="error-message"
